--- a/RepositorioEjer1/.project
+++ b/RepositorioEjer1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RepositorioEjer1</name>
+	<name>AgendaColaborativa</name>
 	<comment></comment>
 	<projects>
 	</projects>
